<resources>
    <string name="app_name">GoShop</string>
    <string name="fcm_sender_id">334660349288</string>
    <string name="pushwoosh_code">C8B70-A50A6</string>
    <string name="pwappid">pw-c8b70-a50a6</string>
    <string name="app_network_error">network error</string>
    <string name="payday_treat">Payday Treat</string>
    <string name="home_second_category">Categories</string>
    <string name="home_second_brand">Brands</string>
    <string name="home_second_tv_shows">TV Shows</string>
    <string name="home_second_egift_cards">eGift Cards</string>
    <string name="home_video_onair">On Air</string>
    <string name="home_video_onair_tab_ch118">CH118</string>
    <string name="home_video_onair_tab_ch120">CH120</string>
    <string name="home_video_onair_tab_ch303">CH303</string>
    <string name="home_video_onair_tab_fb_live">FB LIVE</string>
    <string name="home_video_onair_tab_fb_parting_line">&#160;/&#160;</string>
    <string name="home_video_item_buy_now">Buy Now</string>
    <string name="home_search_hint">Search products or brands</string>
    <string name="home_video_time">11:00–14:30</string>
    <string name="home_video_prev">prev</string>
    <string name="home_video_next">next</string>
    <string name="home_item_price_off">30% OFF</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="home_drawlayout_hey">Hey,&#160;</string>
    <string name="home_drawlayout_not_sign_up">Sign up / Login</string>
    <string name="home_drawlayout_sign_up">User Name</string>
    <string name="home_drawlayout_home">Home</string>
    <string name="home_drawlayout_category">Categories</string>
    <string name="home_drawlayout_rewards">GO+ Loyalty</string>
    <string name="home_drawlayout_shopping_cart">Shopping Cart</string>
    <string name="home_drawlayout_my_wishlist">My Wishlist</string>
    <string name="home_drawlayout_my_orders">My Orders</string>
    <string name="home_drawlayout_notifications">Notifications</string>
    <string name="home_drawlayout_help_support">Help &amp; Support</string>
    <string name="home_drawlayout_settings">Settings</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_login">LOGIN</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_or">OR</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_bottom_describe">Don\'t have an account yet?&#160;</string>
    <string name="login_register">Register now.</string>
    <string name="required_field">This is a required field.</string>
    <string name="loginregister_emailbound_tips_error_email_format">Please enter a valid email
        address. For example johndoe@domain.com.
    </string>
    <string name="enter_characters_ignored">"Please enter 4 or more characters. Leading or trailing
        spaces will be ignored."
    </string>
    <string name="promotion_new_arrivals">New Arrivals</string>
    <string name="promotion_filter">Filter</string>
    <string name="promotion_item_new_symbol">new</string>
    <string name="promotion_item_best_symbol">best</string>
    <string name="promotion_list_symbol">promotion list</string>
    <string name="promotion_banner_symbol">promotion banner</string>
    <string name="my_orders_title_number">Order Number:&#160;</string>
    <string name="my_orders_title_status">Order Status:&#160;</string>
    <string name="my_orders_total_price">Total incl. GST:&#160;</string>
    <string name="my_orders_track">Track</string>
    <string name="my_orders_title">My Orders</string>
    <string name="my_orders_detail_title">Order Detail</string>
    <string name="my_orders_sub_total">Sub Total:&#160;</string>
    <string name="my_orders_rounding_amout">Rounding Amout:&#160;</string>
    <string name="my_orders_shipping">Shipping:&#160;</string>
    <string name="my_orders_discount">Discount:&#160;</string>
    <string name="my_orders_information">Order Information:&#160;</string>
    <string name="my_orders_placed_at">Placed at:&#160;</string>
    <string name="my_orders_shipping_address">Shipping Address</string>
    <string name="my_orders_payment_method">Payment Method</string>
    <string name="my_orders_items">Items</string>
    <string name="my_orders_test_id">#123019223</string>
    <string name="my_orders_test_color">Color: Blue</string>
    <string name="my_orders_test_size">Size: M</string>
    <string name="my_orders_test_amount">* 3</string>
    <string name="checkout_title">Checkout</string>
    <string name="checkout_shipping">Shipping</string>
    <string name="checkout_payment">Payment</string>
    <string name="checkout_payment_bank">Online Banking</string>
    <string name="checkout_payment_credit">Credit Card</string>
    <string name="checkout_payment_cash_on_deliery">Cash on Deliery</string>
    <string name="checkout_items">Items</string>
    <string name="checkout_place_my_order">Place My Order</string>
    <string name="checkout_item_color_and_size">Color: Blue,Size: L</string>
    <string name="home_item_test_product_name">Manjung Korean Crispy Seaweed(Sea Salt)</string>
    <string name="home_item_test_product_price">RM 119.00</string>
    <string name="home_bottom_slide_title">Best Seller</string>
    <string name="facebook_id">1287318627981888</string>
    <string name="facebook_app_id">166452604069809</string>
    <string name="fb_login_protocol_scheme">fb166452604069809</string>
    <string name="FB_Login_tips_error">Please check the internet, and try again.</string>
    <string name="register">Register</string>
    <string name="register_name">Name</string>
    <string name="register_lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="email_end">Email:</string>
    <string name="email_format">test@test.com</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_optional">Mobile Number (Optional)</string>
    <string name="change_password">Change Password</string>
    <string name="password">Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirmation_password">Password Confirmation</string>
    <string name="confirm_error">Confirm password is different from new password</string>
    <string name="phone">Phone</string>
    <string name="register_tips_email">Email me the latest shopping news</string>
    <string name="register_tips_sms">SMS me the latest shopping news</string>
    <string name="add_address_box">Set it as default shipping address</string>
    <string name="add_address_billing">Set it as default billing address</string>
    <string name="register_tips">By registering account, I confirm that: I have read and agree to
        the Privacy Policy, Terms and Conditions, Terms of User at Go Shop.
    </string>
    <string name="register_tips_privacy_policy">Privacy Policy</string>
    <string name="register_tips_terms_and_conditions">Terms and Conditions</string>
    <string name="register_tips_terms_of_user">Terms of User</string>
    <string name="account">Account</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="complement_email">Complement Email</string>
    <string name="complement_email_tips">Your email cannot be retrieved from your Facebook account.
        In order to complete the registration, please provide your email address below:
    </string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="reset_password_tips">Please specify your email address used for registration and
        we will send you a link to reset your password.
    </string>
    <string name="reset_password">Reset Password</string>
    <string name="send_confirmation_link">Send Confirmation Link</string>
    <string name="pdp">PDP</string>
    <string name="pdp_title">Kloken Living Box Value Set Kloken Living Box Value Set</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="details">Details</string>
    <string name="details_top_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </string>
    <string name="by_user_time">By User Name on 1/2/18</string>
    <string name="details_tips">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam
        velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit
        elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris molestie elit,
        et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis pretium sit amet
        quis magna.
    </string>
    <string name="product_summary">Product Summary</string>
    <string name="product_summary_tips">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus,
        ac blandit elit tincidunt id. Sed rhoncus, tortor sed eleifend tristique, tortor mauris
        molestie elit, et lacinia ipsum quam nec dui. Quisque nec mauris sit amet elit iaculis
        pretium sit amet quis magna.
    </string>
    <string name="color">Color</string>
    <string name="quantity">Quantity</string>
    <string name="rm">RM</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="delivery_info_tips_overseas">Product deliver from overseas</string>
    <string name="delivery_info_tips_cash">Cash on Delivery is available</string>
    <string name="seven_return">7 Days Easy Return</string>
    <string name="six_month">6 Month of Installment</string>
    <string name="q_a">Q&#38;A</string>
    <string name="questions">Questions</string>
    <string name="answers">Answers</string>
    <string name="answer">Answer</string>
    <string name="ask_a_question">Ask a Question</string>
    <string name="q">Q</string>
    <string name="a">A</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a Review</string>
    <string name="view_more">View More</string>
    <string name="view_all">View All</string>
    <string name="additional_information">Additional Information</string>
    <string name="frequently_bought_together">Frequently Bought Together</string>
    <string name="in_stock">In Stock</string>
    <string name="pdp_additionall_value">N/A</string>
    <string name="search">Search</string>
    <string name="search_no_data">Your search returns no results.</string>
    <string name="search_explore">Why not to explore our best sellers</string>
    <string name="or">or</string>
    <string name="whoops_email">Whoops, email please!</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_address_book">My Address Book</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_support">Help &#38; Support</string>
    <string name="settings">Settings</string>
    <string name="select_address">Select Address</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="go_loyalty">Go+ Loyalty</string>
    <string name="notifications">Notifications</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="my_rewards">My Rewards</string>
    <string name="other_page">Other Page</string>
    <string name="gender_empty">Please choose a gender!</string>
</resources>