<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.goshop.app.common.view.RobotoRegularTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_font_12"
        android:paddingTop="@dimen/size_21"
        android:text="@string/gender"
        android:textColor="@color/color_grayscale_secondary"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/size_14"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/ll_select_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_select_male"
                android:layout_width="@dimen/size_20"
                android:layout_height="@dimen/size_20"
                android:contentDescription="@string/app_name"
                android:background="@drawable/selector_radio_button"
            />
            <com.goshop.app.common.view.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/size_8"
                android:textColor="@color/color_grayscale_text"
                android:textSize="@dimen/size_font_16"
                android:text="@string/male"
                tools:ignore="RtlSymmetry"
                android:paddingStart="@dimen/size_8"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_select_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_select_female"
                android:layout_width="@dimen/size_20"
                android:layout_height="@dimen/size_20"
                android:contentDescription="@string/app_name"
                android:background="@drawable/selector_radio_button"/>
            <com.goshop.app.common.view.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/size_8"
                android:textColor="@color/color_grayscale_text"
                android:textSize="@dimen/size_font_16"
                android:text="@string/female"
                tools:ignore="RtlSymmetry"
                android:paddingStart="@dimen/size_8"/>
        </LinearLayout>
    </LinearLayout>

    <com.goshop.app.common.view.RobotoRegularTextView
        android:id="@+id/tv_gender_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/size_8"
        android:paddingTop="@dimen/size_4"
        android:visibility="gone"
        android:text="@string/gender_empty"
        android:textSize="@dimen/size_font_12"
        android:textColor="@color/color_orange_red"/>
</LinearLayout>