<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_img_text_img_close"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_4"
        android:background="@drawable/bg_navigation_bar_shadow"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.goshop.app.common.view.RobotoRegularTextView
                android:id="@+id/btn_test_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/size_16"
                android:textColor="@color/color_grayscale_text"
                android:background="@drawable/bg_white_top_bottom_line"
                android:textSize="@dimen/size_font_14"
                android:text="@string/login"/>

            <com.goshop.app.common.view.RobotoRegularTextView
                android:id="@+id/btn_test_send_reset_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/size_16"
                android:textColor="@color/color_grayscale_text"
                android:background="@drawable/bg_white_top_bottom_line"
                android:textSize="@dimen/size_font_14"
                android:text="@string/reset_password"/>
            <com.goshop.app.common.view.RobotoRegularTextView
                android:id="@+id/btn_test_complement_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/size_16"
                android:textColor="@color/color_grayscale_text"
                android:background="@drawable/bg_white_top_bottom_line"
                android:textSize="@dimen/size_font_14"
                android:text="@string/whoops_email"/>
            <com.goshop.app.common.view.RobotoRegularTextView
                android:id="@+id/btn_test_my_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/size_16"
                android:textColor="@color/color_grayscale_text"
                android:background="@drawable/bg_white_top_bottom_line"
                android:textSize="@dimen/size_font_14"
                android:text="@string/my_address_book"/>

            <com.goshop.app.common.view.RobotoRegularTextView
                android:id="@+id/btn_test_select_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/size_16"
                android:textColor="@color/color_grayscale_text"
                android:background="@drawable/bg_white_top_bottom_line"
                android:textSize="@dimen/size_font_14"
                android:text="@string/select_address"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
